# sad_slt

./: .env.example  .gitignore  README.md  _routes_check.py  docker-compose.yml  index.html  pyproject.toml  requirements.txt  sistema_apoio_a_tomada_de_decisao_web.code-workspace
admin/: demanda.html  demanda.js  demandas.html  demandas.js  index.html  login.html  login.js  objeto.html  objeto.js  objetos.html  objetos.js  painel.html  painel.js  revisao-status.html  revisao-status.js
ahp/: colaborativa.html  home.html  index.html  step1-configuracao.html  step1-criterios.html  step2-criterios.html  step2-nomes.html  step3-metodo.html  step3-nomes.html  step4-comparacao.html  step4-metodo.html  step5-comparacao.html  step5-resultados.html  step6-alternativas.html  step6-resultados.html  step7-alternativas.html  tipo-analise.html
api/: codigos_demanda.py  config.py  constants.py  exceptions.py  geometria_parser.py  health_checks.py  server.py  sigma_dsn.py  sigma_password.py  sigma_proxy.py
cadastro/: abrangencia.js  cadastro.js  catalogo-diretorias.html  catalogo-eixos-pef.html  catalogo-frentes-pli.html  catalogo-planos.html  geometria.js  index.html  referencia-render.js  spatial-constraint.js
data/: Catalogo_Hierarquico_SLT.xlsx  Exemplo_Matriz_Criterios_Premissas_Analise.csv  Matriz_Criterios_Premissas_PLI-SP.xlsx  Matriz_Criterios_Premissas_PLI-SP_20260608_195036.xlsx  Modelo_Matriz_Criterios_Premissas_Analise.csv  Modelo_Matriz_Criterios_Premissas_Analise.xlsx  catalogo-slt.json  matriz-criterios-premissas.json  referencia-classificacao.json  referencia-institucional.json
database/: 001_create_database.sql  002_schema_cadastro_auditoria.sql  003_schema_ahp_objetos.sql  004_schema_ahp_analises.sql  005_schema_multicriterio.sql  006_drop_old_analises.sql  007_schema_demandas_aprovadas.sql  008_move_dom_status_objeto.sql  009_schema_hierarquizacao_demandas.sql  010_rename_demandas_aprovadas.sql  (+28 more)
(+151 files in other folders)
