[project]
name = "slt-apoio-decisao"
version = "1.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pyshp>=2.3.1",
    "shapely>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "argon2-cffi>=23.1.0",
    "bcrypt>=4.1.0",
]

[tool.pyright]
include = ["api"]
exclude = ["scripts/**", "**/__pycache__", "**/.venv"]
extraPaths = ["."]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pylint.main]
init-hook = 'import sys; sys.path.insert(0, ".")'
py-version = "3.11"
max-line-length = 88
jobs = 0
disable = [
    "duplicate-code",
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "too-many-return-statements",
    "import-outside-toplevel",
    "broad-exception-caught",
    "ungrouped-imports",
    "unused-import",
    "line-too-long",
    "trailing-newlines",
    "missing-final-newline",
    "wrong-import-position",
    "invalid-character-carriage-return",
    "invalid-name",
]
